--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "watch": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
-    "build": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
+    "watch": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file parcel.js",
+    "build": "parcel build ./public/js/index.js --out-dir ./public/js --out-file parcel.js"
   },
   "author": "Vickey",
   "license": "ISC",
