--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/polyfill": "^7.12.1",
     "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "dom-to-image": "^2.6.0",
     "dotenv": "^10.0.0",
